# billbot

./: .env.example  .gitignore  README.md  auto.py  billbot.py  com.billbot.daily.plist  db.py  gmail_fetch.py  pyproject.toml  requirements.txt  setup_guide.md  splitwise_post.py  tenants.example.json
